--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+apps/processes/migrations/0001_initial.py
+apps/processes/migrations/0002_initial.py
+apps/users/migrations/0001_initial.py
+apps/objects/migrations/0001_initial.py
