--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,10 @@ pathspec==0.9.0
 Pillow==8.4.0
 PyJWT==2.3.0
 pyparsing==3.0.6
-pypiwin32==223
+#pypiwin32==223
 python-dateutil==2.8.2
 pytz==2021.3
-pywin32==305
+#pywin32==305
 PyYAML==5.4.1
 requests==2.26.0
 ruamel.yaml==0.17.17
