Save deploy in AWS

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,8 @@ apps/objects/migrations/0001_initial.py
 apps/objects/migrations/0001_initial.py
 apps/processes/migrations/0001_initial.py
 apps/users/migrations/0001_initial.py
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
