--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ itypes==1.2.0
 Jinja2==3.0.3
 jmespath==0.10.0
 MarkupSafe==2.0.1
+mysqlclient==2.0.0
 packaging==21.3
 pathspec==0.9.0
 Pillow==8.4.0
